# HySkill

./: .gitignore  README.md  pyproject.toml
community-results/: README.md
community-results/deepseek7b/: MANIFEST.md  README.md  summary.json  (+6 more)
docs/: 02-innovations.md  03-benchmarks-and-competitors.md  04-experiment-design.md  05-results.md  06-idea-and-decisions.md  08-multimodel-plan.md  09-summary.md  10-k-ablation-analysis.md  background.md  experiment-design.md  hyde-method.md  idea.md  phase0-full-tables.md  phase0-results.md
hyskill/: __init__.py  bm25.py  embedder.py  fusion.py  generator.py  k_ablation.py  naive_hyde.py  parser.py  plugin.py  retriever.py  two_stage.py
scripts/: analyze.py  audit_k_cache.py  continue_k_cache_sequence.sh  export_analysis_pack.py  export_full_imagination_cache.py  export_loading.py  export_reference_pack.py  export_top50.py  finalize_k_retrieval.py  gate.py  migrate_k_source_revision.py  phase2_significance.py  queue_k_model_after.sh  route_k_retrieval.py  route_pilot.py  route_variant.py  run_k_ablation.sh  run_k_cache_stage.sh  run_k_model_sequence.sh  run_multimodel.sh  run_phase0.sh  run_phase2a.sh  run_phase2b.sh  run_phase2c.sh  significance.py  smoke.sh  summarize_k_ablation.py  summarize_k_ablation_fleet.py  summarize_multimodel.py  validate_k_cache.py  validate_k_retrieval.py  warm_cache.py
tests/: test_bm25.py  test_embedder.py  test_fusion.py  test_gate.py  test_generator.py  test_naive_hyde.py  test_parser.py  test_plugin.py  test_retriever.py  test_route_variant.py  test_significance.py  test_two_stage.py
(+148 files in other folders)
